--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,20 @@ mpmath==1.3.0
 multidict==6.6.4
 networkx==3.5
 numpy==2.3.2
+pandas==2.3.2
 propcache==0.3.2
 psutil==7.0.0
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.4
 scipy==1.16.1
+six==1.17.0
 sympy==1.14.0
 torch==2.8.0
 torch-geometric==2.6.1
 tqdm==4.67.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
 yarl==1.20.1
